Add nix dev environment
Fix flake

Fix project setup

Fix project setup for pytest

Add nix formatter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 pythonpath = [
-  "softsensormonitorapp"
+  "src"
 ]
 minversion = "6.0"
 addopts = "-ra -q"
